--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@
 
 body {
     display: flex;
-    background: linear-gradient(92.88deg, #eb8359 9.16%, #ACE1AF 64.72%);
+    background-color: #cccccc;
+    background-image: url(background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     min-height: 100vh;
     padding: 0 10px;
     align-items: center;
@@ -17,7 +21,7 @@ body {
 }
 
 .container {
-    background: #fff;
+    background: rgb(32, 32, 32);
     width: 450px;
     border-radius: 10px;
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.12);
@@ -52,12 +56,13 @@ header .navigation span {
 }
 
 header .navigation span:hover {
-    background: #f2f2f2;
+    background: #ACE1AF;
 }
 
 header .current-date {
     font-weight: 500;
     font-size: 1.45rem;
+    color: bisque;
 }
 
 .calendar-body {
@@ -78,7 +83,7 @@ header .current-date {
 .calendar-body li {
     width: calc(100% / 7);
     font-size: 1.07rem;
-    color: #414141;
+    color: bisque;
 }
 
 .calendar-body .weekdays li {
@@ -94,9 +99,10 @@ header .current-date {
 }
 
 .dates li.inactive {
-    color: #aaa;
+    color: #414141;
 }
-.dates li:active{
+
+.dates li:focus {
     text-decoration: underline;
 }
 
@@ -121,17 +127,21 @@ header .current-date {
 }
 
 .dates li:not(.active):hover::before {
-    background: #e4e1e1;
+    background: #ACE1AF;
+}
+
+.event-container span {
+    color: indianred;
 }
 
 .event-container p {
     justify-items: right;
     margin: 0 0 0 40px;
     display: flex;
-    background-color: #fff;
+    background-color: black;
     padding: 20px;
-    color: #414141;
-    background: #fff;
+    color: bisque;
+    background: rgb(32, 32, 32);
     width: 450px;
     border-radius: 10px;
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.12);
@@ -139,7 +149,7 @@ header .current-date {
 
 .navbar {
     width: 300px;
-    background: #d9d9d9;
+    background: rgb(32, 32, 32);
     margin: 20px auto;
     position: fixed;
     top: 0;
@@ -148,21 +158,21 @@ header .current-date {
     width: 100%;
     display: flex;
     align-items: center;
-    background: #fff;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
-.navbar p{
+.navbar p {
     font-size: x-large;
     padding-left: 40px;
+    color: bisque;
 }
 
-.modal{
+.modal {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
-    top:0;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -171,10 +181,10 @@ header .current-date {
 
 }
 
-.modal-content{
+.modal-content {
     width: 500px;
     height: 250px;
-    background-color: #fff;
+    background-color: bisque;
     border-radius: 5px;
     text-align: center;
     padding: 10px;
@@ -184,13 +194,13 @@ header .current-date {
 
 }
 
-input{
+input {
     width: 50%;
     display: block;
     margin: 10px auto;
 }
 
-#close{
+#close {
     position: absolute;
     top: 0;
     right: 14px;
@@ -199,10 +209,16 @@ input{
     cursor: pointer;
 }
 
-#submit{
+#submit {
     width: 50px;
-    background: linear-gradient(to right blue purple);
+    background: #eb8359;
 
 
 
+}
+
+.dates li.has-event {
+    color: indianred;
+    text-decoration: underline;
+    border-radius: 50%;
 }
